<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MyCollection</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="login">Login</string>
    <string name="register">Not a member?Register</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_password_reset">PasswordResetActivity</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email_address">Email Address</string>
    <string name="password_confirmation">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="terms_conditions">I agree to the Terms and Conditions of use</string>
<<<<<<< HEAD
    <string name="new_password">New password</string>
    <string name="confirm_newpassword">Confirm new password</string>
    <string name="reset_password">Change my password</string>
=======
>>>>>>> b07c3dfb81d38c8c5dde0729230fd91c02651368

</resources>
