<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="105dp"
        android:layout_marginLeft="40dp"
        android:text="@string/login" 
        android:background="@drawable/button_style"
        android:textColor="@android:color/white"/>

    <CheckBox
        android:id="@+id/chBoxLoginRememberMe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnLogin"
        android:layout_marginLeft="10dp"
        android:layout_toLeftOf="@+id/btnLogin"
        android:text="@string/remember_me"
        android:textSize="12sp" />

    <EditText
        android:id="@+id/etLoginPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/chBoxLoginRememberMe"
        android:layout_alignLeft="@+id/btnLogin"
        android:layout_alignRight="@+id/btnLogin"
        android:layout_marginBottom="10dp"
        android:background="@drawable/button_style"
        android:drawableRight="@drawable/ic_launcher"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
<<<<<<< HEAD
        android:paddingLeft="15dp" 
        android:textColor="@android:color/white">
=======
        android:paddingLeft="15dp" >
>>>>>>> b07c3dfb81d38c8c5dde0729230fd91c02651368

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/etLoginUserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/etLoginPassword"
        android:layout_alignLeft="@+id/etLoginPassword"
        android:layout_alignRight="@+id/etLoginPassword"
        android:layout_marginBottom="16dp"
        android:background="@drawable/button_style"
        android:drawableRight="@drawable/ic_launcher"
        android:ems="10"
        android:hint="@string/user_name"
        android:inputType="textPersonName"
<<<<<<< HEAD
        android:paddingLeft="15dp"
        android:textColor="@android:color/white"/>
=======
        android:paddingLeft="15dp"/>
>>>>>>> b07c3dfb81d38c8c5dde0729230fd91c02651368

    <TextView
        android:id="@+id/tvLoginForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/chBoxLoginRememberMe"
        android:layout_alignBottom="@+id/chBoxLoginRememberMe"
        android:layout_alignRight="@+id/btnLogin"
        android:text="@string/forgot_password"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/tvLoginRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/btnLogin"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:text="@string/register"
        android:textSize="12sp" />

</RelativeLayout>